	PR python/10953: 	* python/py-type.c (typy_fields): Call check_typedef. 	(typy_template_argument): Add TRY_CATCH.